@@ -310,6 +310,7 @@ Fixes:
    * scroller : fix the scroller to locate the current page correctly in case that the scroller is suddenly resized and then the drag couldn't capture the page location.
    * scroller: don't focus region show if the scroller is disabled.
    * mapbuf: reset the mapbuf internal states correclty when the content is removed(unset)
+   * image: fix the elm_image_prescale_set() to work properly.
 
 Removals:
 
